# crew_azam

./: .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
src/crew_azam/: crew.py  gmail_polling.py  main.py
src/crew_azam/config/: agents.yaml  tasks.yaml
src/crew_azam/schema/: tax-invoice.json
